CmdFinder: Register Tab widgets